# telemetry-reader-lib

./: .clang-format  .gitignore  AD2S12101.cpp  AD2S12101.hpp  CMakeLists.txt  CMakePresets.json  README.md  ResolverLogger.cpp  ResolverLogger.hpp  TelemetryLogger.cpp  TelemetryLogger.hpp  TelemetryParser.cpp  TelemetryParser.hpp  jurek-resolver.py  library.h  main.cpp  psu_control.py  requirements.txt  vcpkg.json
